# tg

./: .coverage  .gitignore  .memory.md  AGENTS.md  AGENTS1.md  AGENT_MEMORY.md  AUDIT.md  MIGRATION_HANDOFF.md  PLAN_AUDIT.md  PLAN_OZF.md  PLAN_PRE_OZF.md  README.md  pyproject.toml
docs/: scientific-method.md
samples/tmp/: test.r
samples/Бамбук Линь/: .RData  .Rhistory  28.03.12_2.5_500_бамбук.dat.csv  29.03.12_20_500_бамбук.dat.csv  3.4.12_20_500_УБамбак.dat.csv  30.03.12_10_500_бамбук.dat.csv  30.03.12_5_500_бамбук.dat.csv  30.03.12_7.5_500_бамбук.dat.csv  header.txt  pretreatment.r
samples/Береза/: 123.r
samples/Гуано_с_землей/: 10.01.14.csv  10.01.14.dat.csv  13.01.14.dat.csv  14.01.14.dat.csv  15.01.14.dat.csv  20.01.14.dat.csv  21.01.14._2dat.dat.csv  21.01.14.dat.csv  22.01.14_7.5.dat.csv  23.01.14_7.5.dat.csv  25.12.13.dat.csv  28.01.14_7.5.dat.csv  29.01.14_5.dat.csv  30.01.14_5.dat.csv  30.12.13.dat.csv  30.12.13_2.dat.csv  pretreatment.r  сырое_4.03.14_1_200.dat.csv  тест.dat.csv
samples/Пластик/: Пластик_600_10_300mg.scv.csv
samples/Сосна/: 123.r
samples/Целлолигнин/: целолигнин_10_600_3033.dat (1).tg  целолигнин_10_600_3033.dat_
samples/Чу/: 1.wmf
src/tgapp/: __init__.py  config.py  main.py
src/tgapp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tgapp/application/: __init__.py  _helpers.py  dto.py  (+5 more)
tests/: conftest.py
tests/integration/: test_effect_behavioral.py  test_full_pipeline.py  test_plot_display.py  test_regression.py  test_regression_r.py  test_routes.py  test_upload_and_process.py
(+116 files in other folders)
