[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgapp"
version = "0.1.0"
description = "Dash migration skeleton for the tg.app Shiny application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dash>=2.17",
  "fastapi>=0.111",
  "jinja2>=3.1",
  "plotly>=5.22",
  "pandas>=2.2",
  "python-multipart>=0.0.9",
  "uvicorn>=0.30",
]

[project.scripts]
tgapp = "tgapp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
