[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tgapp"
version = "0.1.0"
description = "Dash migration skeleton for the tg.app Shiny application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "jinja2>=3.1",
  "plotly>=5.22",
  "pandas>=2.2",
  "python-multipart>=0.0.9",
  "scipy>=1.12",
  "numpy>=1.26",
  "uvicorn>=0.30",
]

[project.scripts]
tgapp = "tgapp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
